--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<mule.tools.version>1.1</mule.tools.version>
 		<apikit.version>1.7.0</apikit.version>
 		<spring.boot.version>1.3.6.RELEASE</spring.boot.version>
-		<start-class>org.taptech.app.MuleBootstrap</start-class>
+		<start-class>org.oscar.app.MuleBootstrap</start-class>
 	</properties>
 
 	<build>
